Added the add new contact btn no logic

--- a/src/index.html
+++ b/src/index.html
@@ -56,34 +56,9 @@
                                     class="contact-search-input"
                                 />
                             </form>
+                            <button class="new-contact-button">new contact</button>
                         </div>
                         <ul class="contact-container">
-                            <li class="contact-infocontainer">
-                                <img
-                                    src="assets/images/thumbnails/image.jpg"
-                                    alt="contact profile picture"
-                                    class="contact-profilepicture"
-                                />
-                                <h3 class="contact-username">Iric Gorgi</h3>
-                                <ul>
-                                    <li class="contact-options"></li>
-                                    <li class="contact-options"></li>
-                                    <li class="contact-options"></li>
-                                </ul>
-                            </li>
-                            <li class="contact-infocontainer">
-                                <img
-                                    src="assets/images/thumbnails/image.jpg"
-                                    alt="contact profile picture"
-                                    class="contact-profilepicture"
-                                />
-                                <h3 class="contact-username">Iric Gorgi</h3>
-                                <ul>
-                                    <li class="contact-options"></li>
-                                    <li class="contact-options"></li>
-                                    <li class="contact-options"></li>
-                                </ul>
-                            </li>
                             <li class="contact-infocontainer">
                                 <img
                                     src="assets/images/thumbnails/image.jpg"
