For now contacts are on LS but i will fix them (test version)

--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
             rel="stylesheet"
         />
         <!-- ! ------------------------------ Libraries ------------------------------ ! -->
-        <link rel="stylesheet" href="../node_modules/aos/dist/aos.css" />
+        <!-- <link rel="stylesheet" href="../node_modules/aos/dist/aos.css" /> -->
     </head>
     <div class="container">
         <body>
@@ -59,32 +59,15 @@
                             <button class="new-contact-button">new contact</button>
                         </div>
                         <ul class="contact-container">
-                            <li class="contact-infocontainer">
+                            <li class="contact-infocontainer" data-contact_id="alskdjaldjasdl">
                                 <img
                                     src="assets/images/thumbnails/image.jpg"
                                     alt="contact profile picture"
                                     class="contact-profilepicture"
                                 />
-                                <h3 class="contact-username">Iric Gorgi</h3>
-                                <ul>
-                                    <li class="contact-options"></li>
-                                    <li class="contact-options"></li>
-                                    <li class="contact-options"></li>
-                                </ul>
+                                <h3 class="contact-username"></h3>
                             </li>
-                            <li class="contact-infocontainer">
-                                <img
-                                    src="assets/images/thumbnails/image.jpg"
-                                    alt="contact profile picture"
-                                    class="contact-profilepicture"
-                                />
-                                <h3 class="contact-username">Iric Gorgi</h3>
-                                <ul>
-                                    <li class="contact-options"></li>
-                                    <li class="contact-options"></li>
-                                    <li class="contact-options"></li>
-                                </ul>
-                            </li>
+                            `)
                         </ul>
                     </section>
                     <section class="chat-section">
@@ -151,9 +134,9 @@
                 </div>
             </main>
             <!-- ! ------------------------------ Scripts ------------------------------ ! -->
-            <script type="module" src="/main.js"></script>
+            <script type="module" src="./main.js"></script>
             <!-- ! ------------------------------ library Scripts ------------------------------ ! -->
-            <script src="../node_modules/aos/dist/aos.js"></script>
+            <!-- <script src="../node_modules/aos/dist/aos.js"></script> -->
             <script
                 src="https://kit.fontawesome.com/9c345a79fa.js"
                 crossorigin="anonymous"
