--- a/src/index.html
+++ b/src/index.html
@@ -20,55 +20,47 @@
     </head>
     <div class="container">
         <body>
-            <!-- ! ------------------------------ Header ------------------------------ ! -->
-            <header class="header">
-                <div class="header-wrapper">
-                    <div class="userprofile">
-                        <div class="userprofile-picture">
-                            <img src="assets/images/logo/chad.jpg" alt="user profile picture" />
-                        </div>
-                        <div class="userprofile-info">
-                            <h2 class="username-display">Iric Gorgi</h2>
-                        </div>
-                    </div>
-                    <div class="user-batterinfo">
-                        <h2>
-                            <i class="fa-solid fa-battery-full user-batteryicon"></i
-                            ><span class="batteryinfo-percentage">10%</span>
-                        </h2>
-                    </div>
-                    <div class="authorsocial-informations">
-                        <a href=""><i class="fa-brands fa-linkedin"></i></a>
-                        <a href=""><i class="fa-brands fa-github"></i></a>
-                    </div>
-                    <div class="user-onlinestate"></div>
-                </div>
-            </header>
             <!-- ! ------------------------------ Main ------------------------------ ! -->
             <main class="main">
                 <div class="main-wrapper">
                     <section class="contact-section">
-                        <div class="contact-section-search">
-                            <form class="contact-searchform">
-                                <input
-                                    type="search"
-                                    placeholder="Search or start a new chat"
-                                    class="contact-search-input"
-                                />
-                            </form>
-                            <button class="new-contact-button">new contact</button>
+                        <div class="contact-section-header">
+                            <div class="contact-section-userinfo">
+                                <div class="userprofile">
+                                    <div class="userprofile-picture">
+                                        <img
+                                            src="assets/images/logo/chad.jpg"
+                                            alt="user profile picture"
+                                        />
+                                    </div>
+                                    <div class="userprofile-info">
+                                        <h2 class="username-display">Iric Gorgi</h2>
+                                    </div>
+                                </div>
+                                <div class="user-batterinfo">
+                                    <h2>
+                                        <i class="fa-solid fa-battery-full user-batteryicon"></i
+                                        ><span class="batteryinfo-percentage">10%</span>
+                                    </h2>
+                                </div>
+                                <div class="authorsocial-informations">
+                                    <a href=""><i class="fa-brands fa-linkedin"></i></a>
+                                    <a href=""><i class="fa-brands fa-github"></i></a>
+                                </div>
+                                <div class="user-onlinestate"></div>
+                            </div>
+                            <div class="contact-search-newcontact">
+                                <form class="contact-searchform">
+                                    <input
+                                        type="search"
+                                        placeholder="Search or start a new chat"
+                                        class="contact-search-input"
+                                    />
+                                </form>
+                                <button class="new-contact-button">new contact</button>
+                            </div>
                         </div>
-                        <ul class="contact-container">
-                            <li class="contact-infocontainer" data-contact_id="alskdjaldjasdl">
-                                <img
-                                    src="assets/images/thumbnails/image.jpg"
-                                    alt="contact profile picture"
-                                    class="contact-profilepicture"
-                                />
-                                <h3 class="contact-username"></h3>
-                            </li>
-                            `)
-                        </ul>
+                        <ul class="contact-container"></ul>
                     </section>
                     <section class="chat-section">
                         <div class="chat-section-header">
