Changed the layout for contact section and added some root colors

--- a/src/index.html
+++ b/src/index.html
@@ -26,17 +26,12 @@
                     <section class="contact-section">
                         <div class="contact-section-header">
                             <div class="contact-section-userinfo">
-                                <div class="userprofile">
-                                    <div class="userprofile-picture">
-                                        <img
-                                            src="assets/images/logo/chad.jpg"
-                                            alt="user profile picture"
-                                        />
-                                    </div>
-                                    <div class="userprofile-info">
-                                        <h2 class="username-display">Iric Gorgi</h2>
-                                    </div>
-                                </div>
+                                <img
+                                    class="contact-header-userprofilepicture"
+                                    src="assets/images/logo/chad.jpg"
+                                    alt="user profile picture"
+                                />
+                                <h2 class="contact-header-username-display">Iric Gorgi</h2>
                                 <div class="user-batterinfo">
                                     <h2>
                                         <i class="fa-solid fa-battery-full user-batteryicon"></i
@@ -60,7 +55,7 @@
                                 <button class="new-contact-button">new contact</button>
                             </div>
                         </div>
-                        <ul class="contact-container"></ul>
+                        <!-- <ul class="contact-container"></ul> -->
                     </section>
                     <section class="chat-section">
                         <div class="chat-section-header">
