--- a/src/index.html
+++ b/src/index.html
@@ -21,6 +21,7 @@
     <div class="container">
         <body>
             <!-- ! ------------------------------ Main ------------------------------ ! -->
+            <p>this is just for test</p>
             <main class="main">
                 <div class="main-wrapper">
                     <!-- ! ------------------------------ Option bar ------------------------------ ! -->
@@ -51,7 +52,6 @@
                             </li>
                         </ul>
                     </section>
-                    <h1>hello</h1>
                     <!-- ! ------------------------------ Contact section container ------------------------------ ! -->
                     <section class="contact-section">
                         <!-- -------------------- Contact Inforamation -------------------->
